# TalkToAnki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt  talktoanki_server.py
examples/: cursor_mcp_config.json
